# victron-ble-ha-parser

./: .gitmodules  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASING.md  py.typed  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_live.py
.github/workflows/: ci.yml  publish.yml
tests/: test_devices.py
tests/__snapshots__/: test_devices.ambr
victron-ble-ha-parser/: parser.py
victron_ble_ha_parser/: __init__.py  custom_state_data.py  parser.py
