[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "victron_ble_ha_parser"
version = "0.4.8"
description = "A parser for Victron BLE messages suitable for use with Home Assistant"
authors = [{ name = "Raj Laud", email = "raj.laud@gmail.com" }]
license = "apache-2.0"
dependencies = [
    "bluetooth-sensor-state-data>=1.6.1",
    "sensor-state-data>=2.16.0",
    "victron-ble==0.9.2",
]
